Fixed spacing

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ footer {
 ul {
     list-style-type: none;
     margin: 0;
+    padding: 0;
 
     display: flex;
     justify-content: center;
